# Rougelite

./: .clang-format  CMakeLists.txt  TODO.md  compile_commands.json
.cache/clangd/index/: Block.cpp.0EE7988B5E1AE67D.idx  Block.cpp.DCC80F16F29AD90E.idx  Block.hpp.03857866B8D88C71.idx  Block.hpp.7F0E809B4364A82E.idx  Config.h.ACA978EDD508E852.idx  Config.hpp.27A00B84A35EFA68.idx  Config.hpp.4385E3228EED85F7.idx  Config.hpp.EC140BABA0C0068E.idx  Entity.cpp.2AAA28E090DC1325.idx  Entity.cpp.47D9F084EE2BA2D4.idx  Entity.cpp.5E57CD3D5FF4FA21.idx  Entity.h.E2CD488FB3496BC7.idx  Entity.hpp.116C86F0479A4689.idx  Entity.hpp.5C553BC92CDD5490.idx  Entity.hpp.60A3E28E2161BDE9.idx  Entity.hpp.DFBB069E433C4DE8.idx  Menubar.cpp.870211DC6879EA82.idx  Menubar.hpp.07351029138936C3.idx  Player.cpp.35589D0A7A86BAC8.idx  Player.cpp.6D0FA125C5FE2741.idx  Player.cpp.B2064A6BCD07707E.idx  Player.h.7D8E04DE01C73C51.idx  Player.hpp.867EDF5A0257C7DD.idx  Player.hpp.AC2A1CD3911007F1.idx  Player.hpp.FCC0EEB1A11E3F2C.idx  Vec2.h.CEB2356B9A2EC344.idx  main.cpp.8E2B69305ACA8047.idx  main.cpp.9470DAD4DEAA67A2.idx  main.cpp.D9D19D3875D74386.idx  raylib.h.400C9FC6ECD9B6FF.idx  raylib.h.B0588097DC8DF59C.idx  raylib.h.B658C6B52F1DD92C.idx  raylibCpp.cpp.42A6FFF97F00F04C.idx  raylibCpp.cpp.B72B8AD039B16C0D.idx  raylibCpp.h.221E976F4060BA2F.idx
include/: Config.hpp  Entity.h  Player.h  Player.hpp  Vec2.h  raylibCpp.h
include/Entity/: Block.hpp  Entity.hpp  Player.hpp
include/UI/: Menubar.hpp
src/: main.cpp  raylibCpp.cpp
src/Entity/: Block.cpp  Entity.cpp  Player.cpp
src/UI/: Menubar.cpp
